# bernlab_maskgen

./: .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: demo.ipynb  train_colab.ipynb
src/: train.py
src/maskgen/: __init__.py  data.py  hub.py  mask_generator.py  model.py  train.py  utils.py
tests/: test_mask_generator.py
