[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maskgen"
version = "0.1.0"
description = "Semantic segmentation mask generator"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "numpy",
    "pillow",
    "tqdm",
]

[project.optional-dependencies]
train = ["wandb", "torchinfo"]
dev = ["pytest", "ruff"]

[tool.hatch.build.targets.wheel]
packages = ["src/maskgen"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
